--- a/android/app/src/main/res/layout/fragment_my_page.xml
+++ b/android/app/src/main/res/layout/fragment_my_page.xml
@@ -174,8 +174,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/vp_pet_profile"
-                        app:setUpIndicator="@{vm.uiState.pets.size()}" />
+                        app:layout_constraintTop_toBottomOf="@+id/vp_pet_profile" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
