--- a/android/app/src/main/res/layout/item_chat_join_people.xml
+++ b/android/app/src/main/res/layout/item_chat_join_people.xml
@@ -9,14 +9,14 @@
         android:id="@+id/iv_chat_join_people"
         android:layout_width="32dp"
         android:layout_height="0dp"
+        android:src="@drawable/img_profile_normal"
         android:layout_marginVertical="10dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/Circle"
-        tools:src="@drawable/ic_launcher_background" />
+        app:shapeAppearanceOverlay="@style/Circle" />
 
     <ImageView
         android:id="@+id/iv_chat_join_people_leader"
