--- a/android/app/src/main/res/layout/item_pet_profile.xml
+++ b/android/app/src/main/res/layout/item_pet_profile.xml
@@ -29,9 +29,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_user_profile_edit"
-                glide1000="@{petView.imageUrl}"
+                glide="@{petView.imageUrl}"
+                android:src="@drawable/img_profile_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -39,7 +40,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearanceOverlay="@style/RoundBig"
+                app:shapeAppearanceOverlay="@style/Circle"
                 tools:src="@drawable/img_profile_normal" />
 
             <ImageView
