--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -64,9 +64,9 @@
                 android:layout_height="68dp"
                 app:layout_constraintTop_toBottomOf="@id/iv_club_detail_poster" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_club_detail_user_image"
-                glide1000="@{vm.club.clubLeaderImage}"
+                glide="@{vm.club.clubLeaderImage}"
                 onSingleClick="@{() -> vm.navigateToProfile(1)}"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -75,7 +75,7 @@
                 app:layout_constraintBottom_toBottomOf="@id/view_club_detail_top_bar"
                 app:layout_constraintStart_toStartOf="@id/view_club_detail_top_bar"
                 app:layout_constraintTop_toTopOf="@id/view_club_detail_top_bar"
-                app:shapeAppearanceOverlay="@style/RoundBig" />
+                app:shapeAppearanceOverlay="@style/Circle" />
 
             <TextView
                 android:id="@+id/tv_club_detail_user_name"
