[AN] feat: 내 모임 구현 (#357)

--- a/android/app/src/main/res/layout/item_club.xml
+++ b/android/app/src/main/res/layout/item_club.xml
@@ -7,10 +7,10 @@
 
         <variable
             name="club"
-            type="com.happy.friendogly.presentation.ui.club.list.ClubListUiModel" />
+            type="com.happy.friendogly.presentation.ui.club.common.model.ClubItemUiModel" />
         <variable
             name="actionHandler"
-            type="com.happy.friendogly.presentation.ui.club.list.ClubListActionHandler" />
+            type="com.happy.friendogly.presentation.ui.club.common.ClubItemActionHandler" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
