--- a/android/app/src/main/res/layout/fragment_club_list.xml
+++ b/android/app/src/main/res/layout/fragment_club_list.xml
@@ -5,7 +5,7 @@
 
     <data>
 
-        <import type="com.happy.friendogly.presentation.ui.club.model.clubfilter.ClubFilter" />
+        <import type="com.happy.friendogly.presentation.ui.club.common.model.clubfilter.ClubFilter" />
 
         <variable
             name="vm"
@@ -123,8 +123,7 @@
                     android:id="@+id/include_club_list"
                     layout="@layout/include_club_list_content"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:vm="@{vm}" />
+                    android:layout_height="match_parent" />
 
                 <include
                     android:id="@+id/include_club_address"
@@ -140,15 +139,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:visibility="gone"
-                    app:vm="@{vm}" />
+                    app:actionHandler="@{vm}" />
 
                 <include
                     android:id="@+id/include_club_error"
                     layout="@layout/include_club_error"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:visibility="gone"
-                    app:vm="@{vm}" />
+                    tools:visibility="gone" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
