--- a/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_footprint_info_pet_detail.xml
@@ -29,6 +29,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="20dp"
+            android:onClick="@{() -> actionHandler.clickFootprintPetImage(footprintPetDetail.petDetail.imageUrl)}"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
