fix: 디자인 & 간격 수정

--- a/android/app/src/main/res/layout/include_club_filter.xml
+++ b/android/app/src/main/res/layout/include_club_filter.xml
@@ -9,7 +9,7 @@
     </data>
 
     <LinearLayout
-        android:background="@drawable/rect_orange100_fill_12"
+        android:background="@drawable/rect_coral100_fill_12"
         android:paddingHorizontal="12dp"
         android:paddingVertical="8dp"
         android:gravity="center"
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size14"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
             android:text="@{filterName}"
             tools:text="참여 가능"
             android:layout_width="wrap_content"
@@ -28,6 +28,7 @@
             android:layout_height="wrap_content" />
 
         <ImageView
+            android:tint="@color/white"
             android:src="@drawable/ic_arrow_bottom"
             android:layout_width="16dp"
             android:layout_height="16dp" />
