--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -18,21 +18,13 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/iv_club_detail_poster"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@color/black"
-                android:backgroundTint="@color/coral30"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_club_normal"
-                app:glide="@{vm.club.clubPoster}"
-                app:layout_constraintBottom_toTopOf="@+id/view_club_detail_top_bar"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <View
+                app:layout_constraintBottom_toTopOf="@+id/iv_club_detail_poster"
+                android:id="@+id/view_club_detail_top_bar"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginVertical="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"/>
 
             <ImageView
                 onSingleClick="@{()->vm.closeDetail()}"
@@ -42,8 +34,9 @@
                 android:background="@drawable/ripple_circle_white"
                 android:padding="2dp"
                 android:src="@drawable/ic_arrow_left"
-                app:layout_constraintStart_toStartOf="@id/iv_club_detail_poster"
-                app:layout_constraintTop_toTopOf="@id/iv_club_detail_poster"
+                app:layout_constraintStart_toStartOf="@id/view_club_detail_top_bar"
+                app:layout_constraintTop_toTopOf="@id/view_club_detail_top_bar"
+                app:layout_constraintBottom_toBottomOf="@+id/view_club_detail_top_bar"
                 app:tint="@color/black" />
 
             <ImageView
@@ -54,12 +47,28 @@
                 android:background="@drawable/ripple_circle_white"
                 android:padding="2dp"
                 android:src="@drawable/ic_more_vertical"
-                app:layout_constraintEnd_toEndOf="@id/iv_club_detail_poster"
-                app:layout_constraintTop_toTopOf="@id/iv_club_detail_poster"
+                app:layout_constraintEnd_toEndOf="@id/view_club_detail_top_bar"
+                app:layout_constraintTop_toTopOf="@id/view_club_detail_top_bar"
+                app:layout_constraintBottom_toBottomOf="@+id/view_club_detail_top_bar"
                 app:tint="@color/black" />
 
+            <ImageView
+                android:id="@+id/iv_club_detail_poster"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/black"
+                android:backgroundTint="@color/coral30"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_club_normal"
+                app:glide="@{vm.club.clubPoster}"
+                app:layout_constraintBottom_toTopOf="@+id/view_club_detail_user_top_bar"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintTop_toBottomOf="@+id/view_club_detail_top_bar"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
             <View
-                android:id="@+id/view_club_detail_top_bar"
+                android:id="@+id/view_club_detail_user_top_bar"
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
                 app:layout_constraintTop_toBottomOf="@id/iv_club_detail_poster" />
@@ -72,12 +81,13 @@
                 android:layout_height="40dp"
                 android:layout_marginStart="10dp"
                 android:src="@drawable/img_profile_normal"
-                app:layout_constraintBottom_toBottomOf="@id/view_club_detail_top_bar"
-                app:layout_constraintStart_toStartOf="@id/view_club_detail_top_bar"
-                app:layout_constraintTop_toTopOf="@id/view_club_detail_top_bar"
+                app:layout_constraintBottom_toBottomOf="@id/view_club_detail_user_top_bar"
+                app:layout_constraintStart_toStartOf="@id/view_club_detail_user_top_bar"
+                app:layout_constraintTop_toTopOf="@id/view_club_detail_user_top_bar"
                 app:shapeAppearanceOverlay="@style/Circle" />
 
             <TextView
+                android:layout_marginTop="5dp"
                 android:id="@+id/tv_club_detail_user_name"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
                 android:layout_width="0dp"
@@ -88,7 +98,7 @@
                 android:text="@{vm.club.clubLeaderName}"
                 app:layout_constraintBottom_toTopOf="@id/ll_club_detail_club_info"
                 app:layout_constraintStart_toEndOf="@id/iv_club_detail_user_image"
-                app:layout_constraintTop_toTopOf="@id/view_club_detail_top_bar"
+                app:layout_constraintTop_toTopOf="@id/view_club_detail_user_top_bar"
                 tools:text="이름" />
 
             <LinearLayout
@@ -99,7 +109,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="5dp"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="@id/view_club_detail_top_bar"
+                app:layout_constraintBottom_toBottomOf="@id/view_club_detail_user_top_bar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_club_detail_user_image"
                 app:layout_constraintTop_toBottomOf="@id/tv_club_detail_user_name">
@@ -130,7 +140,7 @@
                 android:layout_height="6dp"
                 android:layout_marginTop="10dp"
                 android:background="@color/gray300"
-                app:layout_constraintTop_toBottomOf="@id/view_club_detail_top_bar" />
+                app:layout_constraintTop_toBottomOf="@id/view_club_detail_user_top_bar" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcv_club_detail_filter_list"
