--- a/android/app/src/main/res/layout/fragment_club_list.xml
+++ b/android/app/src/main/res/layout/fragment_club_list.xml
@@ -32,17 +32,16 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:background="@drawable/ripple_circle_white"
-            app:address="@{vm.myAddress}"
             app:layout_constraintBottom_toBottomOf="@id/view_club_list_top_bar"
             app:layout_constraintStart_toStartOf="@id/view_club_list_top_bar"
             app:layout_constraintTop_toTopOf="@id/view_club_list_top_bar">
 
             <TextView
-                android:text="@{vm.myAddress.adminArea}"
+                app:address="@{vm.myAddress}"
                 style="@style/Theme.AppCompat.TextView.Bold.Black.Size18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="잠실6동" />
+                tools:text="내 동네 설정" />
 
             <Space
                 android:layout_width="6dp"
