--- a/android/app/src/main/res/layout/activity_register_pet.xml
+++ b/android/app/src/main/res/layout/activity_register_pet.xml
@@ -114,7 +114,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/rect_gray50_fill_12"
                 android:hint="@string/register_pet_name_hint"
-                android:maxLength="15"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="8"
                 android:maxLines="1"
                 android:text="@={vm.petName}"
                 app:layout_constraintStart_toStartOf="@+id/tv_dog_name_title"
@@ -131,7 +133,7 @@
                 app:layout_constraintBottom_toBottomOf="@+id/et_user_name"
                 app:layout_constraintEnd_toEndOf="@+id/et_user_name"
                 app:layout_constraintTop_toTopOf="@+id/et_user_name"
-                tools:text="0/15" />
+                tools:text="0/8" />
 
 
             <TextView
@@ -154,8 +156,10 @@
                 android:layout_weight="1"
                 android:background="@drawable/rect_gray50_fill_12"
                 android:hint="@string/description_hint"
+                android:imeOptions="actionDone"
+                android:inputType="text"
                 android:maxLength="20"
-                android:maxLines="2"
+                android:maxLines="1"
                 android:text="@={vm.petDescription}"
                 app:layout_constraintStart_toStartOf="@+id/tv_description"
                 app:layout_constraintTop_toBottomOf="@+id/tv_description" />
@@ -314,14 +318,14 @@
                 onSingleClick="@{() -> vm.selectPetBirthday()}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:paddingHorizontal="16dp"
-                android:paddingVertical="14dp"
-                android:maxLines="1"
                 android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="12dp"
                 android:layout_weight="1"
                 android:background="@drawable/rect_gray50_fill_12"
                 android:clickable="true"
+                android:maxLines="1"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="14dp"
                 android:text="@{@string/birthday(vm.uiState.petBirthdayYear, vm.uiState.petBirthdayMonth)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -335,7 +339,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="200dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:includeFontPadding="false"
