refactor: 강아지 상세 화면에서 강아지가 비율에 안 맞는 문제 해결

--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -14,7 +14,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/black">
 
 
         <ImageView
@@ -22,14 +23,12 @@
             urlToImage="@{petDetail.imageUrl}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
             android:src="@drawable/img_acorm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             tools:src="@drawable/img_acorm" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -38,7 +37,7 @@
             android:layout_height="0dp"
             android:background="@drawable/rect_black_gradient_fill"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_dog_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.4"
             app:layout_constraintStart_toStartOf="parent">
