--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -484,9 +484,9 @@
     </style>
 
     <style name="Theme.AppCompat.coral.Alert.TextView.Button.Positive" parent="Theme.AppCompat.Alert.Padding.Radius16">
-        <item name="android:background">@drawable/sel_dialog_coral400_fill_16</item>
+        <item name="android:background">@drawable/sel_dialog_coral300_fill_16</item>
         <item name="android:textSize">16dp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
     </style>
 
