--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -429,6 +429,13 @@
         <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.SemiBold.Coral400.Size14" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/coral400</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_semi_bold</item>
+    </style>
+
     <!--Profile Edit Text-->
     <style name="Theme.AppCompat.TextView.Profile.EditText.Contents" parent="@style/Widget.AppCompat.EditText">
         <item name="android:textSize">16dp</item>
