feat: 산책 상태 타이머 기능 임시 구현

--- a/android/app/src/main/res/drawable/rect_white_fill_16.xml
+++ b/android/app/src/main/res/drawable/rect_white_fill_16.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="12dp" />
-    <solid android:color="@color/coral100" />
+    <corners android:radius="16dp" />
+    <solid android:color="@color/white" />
 </shape>
