--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -23,7 +23,9 @@
             android:id="@+id/map_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:clickable="true" />
+            android:clickable="true"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/btn_woof_footprint_refresh"
@@ -32,7 +34,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@drawable/rect_white_fill_30"
-            android:drawableStart="@drawable/ic_refresh"
             android:drawablePadding="8dp"
             android:gravity="center"
             android:onClick="@{() -> actionHandler.clickRefreshBtn()}"
@@ -40,10 +41,10 @@
             android:paddingVertical="8dp"
             android:text="@string/woof_footprint_refresh"
             android:visibility="invisible"
+            app:drawableStartCompat="@drawable/ic_refresh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_woof_back"
@@ -58,8 +59,7 @@
             android:src="@drawable/ic_arrow_left_white"
             android:visibility="invisible"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_woof_close"
@@ -74,32 +74,104 @@
             android:src="@drawable/ic_close_white"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_woof_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginBottom="32dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.naver.maps.map.widget.LocationButtonView
+                android:id="@+id/lbv_woof_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
             android:id="@+id/btn_woof_location"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginStart="12dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="32dp"
             android:onClick="@{() -> actionHandler.clickLocationBtn()}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_walk"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/btn_woof_my_footprint"
             style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
-            android:layout_width="46dp"
-            android:layout_height="46dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginStart="12dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/rect_coral400_fill_12"
             android:gravity="center"
             android:onClick="@{() -> actionHandler.clickMyFootprintBtn()}"
             android:text="@string/woof_my_footprint"
-            app:layout_constraintBottom_toTopOf="@id/btn_woof_mark"
+            app:layout_constraintBottom_toTopOf="@id/btn_woof_location"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_woof_walk"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="12dp"
+            android:background="@drawable/rect_coral10_fill_50"
+            android:visibility="gone"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible">
+
+            <ImageButton
+                android:id="@+id/btn_woof_end_walk"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rect_coral500_fill_30"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center"
+                android:onClick="@{() -> actionHandler.clickEndWalkBtn()}"
+                android:src="@drawable/ic_stop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_woof_walk_status"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"
+                myWalkStatus="@{vm.myWalkStatus}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:drawablePadding="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_woof_end_walk"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:drawableStart="@drawable/ic_marker_ongoing_clicked"
+                tools:text="산책중" />
+
+            <Chronometer
+                android:id="@+id/chronometer_woof_walk_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/btn_woof_end_walk"
+                app:layout_constraintTop_toTopOf="parent"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Coral400.Size20"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageButton
             android:id="@+id/btn_woof_mark"
@@ -113,11 +185,13 @@
             android:onClick="@{() -> actionHandler.clickMarkBtn()}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_foot_print_btn"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:visibility="invisible" />
 
         <TextView
-            android:id="@+id/tv_woof_walk_status"
+            android:id="@+id/tv_woof_footprint_info_walk_status"
             style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             changedWalkStatusTime="@{vm.footprintInfoWalkStatus.changedWalkStatusTime}"
             walkStatus="@{vm.footprintInfoWalkStatus.walkStatus}"
@@ -167,7 +241,6 @@
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         <FrameLayout
             android:id="@+id/btn_woof_location_register"
             android:layout_width="46dp"
@@ -195,22 +268,22 @@
             android:id="@+id/layout_woof_register_marker"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             android:background="@drawable/rect_white_fill_30"
             android:elevation="10dp"
             android:paddingHorizontal="6dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:visibility="visible">
+            tools:visibility="gone">
 
             <TextView
-                android:id="@+id/tv_woof_register_walking_area"
+                android:id="@+id/tv_woof_register_walk_area"
                 style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                android:text="@string/woof_register_walking_area"
+                android:text="@string/woof_register_walk_area"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -223,7 +296,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@{vm.registerAddress}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walking_area"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_register_walk_area"
                 tools:text="서울 송파구 올림픽로35다길 42" />
 
             <androidx.appcompat.widget.AppCompatButton
