--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -22,9 +22,12 @@
     <color name="coral500">#F7634E</color>
     <color name="coral400">#FF7C6B</color>
     <color name="coral300">#FA9487</color>
+    <color name="coral200">#F8B0A3</color>
     <color name="coral100">#F6D0CB</color>
     <color name="coral50">#FFEBE9</color>
     <color name="coral30">#FFF5F3</color>
+    <color name="coral10">#FFF5F3</color>
+    <color name="coral05">#FFF9F8</color>
 
     <color name="blue">#8AABFF</color>
     <color name="map_circle">#1A6568EB</color>
