--- a/android/app/src/main/res/layout/item_chat_other.xml
+++ b/android/app/src/main/res/layout/item_chat_other.xml
@@ -40,7 +40,7 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="에디" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -52,32 +52,36 @@
             <TextView
                 android:id="@+id/tv_chat_other_message"
                 style="@style/Theme.AppCompat.TextView.Regular.Size16"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginEnd="100dp"
+                android:layout_weight="0"
                 android:background="@drawable/rect_gray03_fill_16"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="11dp"
                 android:textColor="@color/black"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_max="wrap"
                 tools:text="채드야 도토리 사진 좀 많이 올려봐봐 레퍼런스 부족하다니깐그러네" />
 
             <TextView
                 android:id="@+id/tv_chat_other_time"
                 style="@style/Theme.AppCompat.TextView.Regular.Gray07.Size10"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:minWidth="100dp"
                 android:layout_gravity="bottom"
+                android:layout_marginStart="5dp"
                 android:layout_marginBottom="2dp"
-                android:visibility="gone"
-                android:layout_weight="0"
+                android:layout_weight="1"
+                android:minWidth="120dp"
                 app:layout_constraintBottom_toBottomOf="@id/tv_chat_other_message"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toEndOf="@id/tv_chat_other_message"
                 tools:text="오후 2:23" />
 
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
