--- a/android/app/src/main/res/layout/activity_register.xml
+++ b/android/app/src/main/res/layout/activity_register.xml
@@ -57,6 +57,7 @@
             android:layout_marginBottom="24dp"
             android:adjustViewBounds="true"
             android:padding="0dp"
+            android:visibility="gone"
             android:scaleType="fitCenter"
             android:src="@drawable/img_google_register"
             app:layout_constraintBottom_toBottomOf="parent"
