--- a/android/app/src/main/res/layout/activity_setting.xml
+++ b/android/app/src/main/res/layout/activity_setting.xml
@@ -15,13 +15,12 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_width="match_parent"
             android:id="@+id/container_header"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            android:background="@color/transparent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -30,10 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/setting"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_gravity="center" />
 
             <ImageView
                 android:id="@+id/iv_close"
@@ -41,12 +37,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_gravity="start"
                 app:srcCompat="@drawable/ic_arrow_left" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.appbar.MaterialToolbar>
+
 
         <TextView
             android:id="@+id/tv_my_activities_title"
