--- a/android/app/src/main/res/layout/activity_chat.xml
+++ b/android/app/src/main/res/layout/activity_chat.xml
@@ -19,8 +19,8 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar_chat_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rect_gray03_botline_bot1"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.appbar.MaterialToolbar
