--- a/android/app/src/main/res/layout/activity_club_add.xml
+++ b/android/app/src/main/res/layout/activity_club_add.xml
@@ -16,38 +16,36 @@
         android:paddingHorizontal="10dp"
         tools:context=".presentation.ui.club.add.ClubAddActivity">
 
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageButton
+                android:id="@+id/iv_club_add_back_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="start"
+                android:layout_marginStart="6dp"
+                android:background="@color/transparent"
+                android:onClick="@{()->vm.cancelAddClub()}"
+                android:src="@drawable/ic_close" />
+
+
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/club_list_add_title" />
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_club_add"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <View
-            android:id="@+id/view_club_add_top_bar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_club_add_back_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/ripple_circle_white"
-            android:onClick="@{()->vm.cancelAddClub()}"
-            android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_add_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_add_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_add_top_bar" />
-
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/club_list_add_title"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_add_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_club_add_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_add_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_add_top_bar" />
 
         <ProgressBar
             android:id="@+id/progressbar_add_club"
@@ -62,6 +60,7 @@
 
         <TextView
             android:id="@+id/tv_club_add_prev_button"
+            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
             onSingleClick="@{()->vm.navigatePrevPage()}"
             android:layout_width="0dp"
             android:layout_height="56dp"
@@ -69,20 +68,19 @@
             android:layout_marginBottom="20dp"
             android:background="@drawable/rect_coral04_fill_8"
             android:clickable="@{vm.validPrevPage}"
-            tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            tools:background="@drawable/rect_white_fill_radius8"
-            tools:backgroundTint="@color/coral400"
-            tools:textColor="@color/white"
-            app:validButtonBackground = "@{vm.validPrevPage}"
-            app:validButtonStyle = "@{vm.validPrevPage}"
-            android:textColor="@color/white"
             android:gravity="center"
             android:text="@string/club_list_prev_btn"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_club_add_next_button"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:validButtonBackground="@{vm.validPrevPage}"
+            app:validButtonStyle="@{vm.validPrevPage}"
+            tools:background="@drawable/rect_white_fill_radius8"
+            tools:backgroundTint="@color/coral400"
+            tools:style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+            tools:textColor="@color/white" />
 
         <TextView
             android:id="@+id/tv_club_add_next_button"
