--- a/android/app/src/main/res/layout/activity_club_detail.xml
+++ b/android/app/src/main/res/layout/activity_club_detail.xml
@@ -34,29 +34,36 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                onSingleClick="@{()->vm.closeDetail()}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:background="@drawable/ripple_circle_white"
-                android:padding="2dp"
-                android:src="@drawable/ic_arrow_left"
-                app:layout_constraintStart_toStartOf="@id/iv_club_detail_poster"
-                app:layout_constraintTop_toTopOf="@id/iv_club_detail_poster"
-                app:tint="@color/black" />
 
-            <ImageView
-                onSingleClick="@{()->vm.openMenu()}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="12dp"
-                android:background="@drawable/ripple_circle_white"
-                android:padding="2dp"
-                android:src="@drawable/ic_more_vertical"
-                app:layout_constraintEnd_toEndOf="@id/iv_club_detail_poster"
-                app:layout_constraintTop_toTopOf="@id/iv_club_detail_poster"
-                app:tint="@color/black" />
+            <com.google.android.material.appbar.MaterialToolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/transparent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageButton
+                    onSingleClick="@{()->vm.closeDetail()}"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="start"
+                    android:background="@drawable/ripple_circle_white"
+                    android:src="@drawable/ic_arrow_left"
+                    app:tint="@color/black" />
+
+
+                <ImageButton
+                    onSingleClick="@{()->vm.openMenu()}"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/ripple_circle_white"
+                    android:padding="2dp"
+                    android:src="@drawable/ic_more_vertical"
+                    app:tint="@color/black" />
+
+            </com.google.android.material.appbar.MaterialToolbar>
+
 
             <View
                 android:id="@+id/view_club_detail_top_bar"
