--- a/android/app/src/main/res/layout/activity_club_modify.xml
+++ b/android/app/src/main/res/layout/activity_club_modify.xml
@@ -137,34 +137,32 @@
             </LinearLayout>
         </ScrollView>
 
-
-        <View
-            android:background="@color/white"
-            android:id="@+id/view_club_modify_top_bar"
+        <com.google.android.material.appbar.MaterialToolbar
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:contentInsetStart="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/transparent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:background="@drawable/ripple_circle_white"
-            android:onClick="@{()->vm.cancelModify()}"
-            android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_modify_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_modify_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_modify_top_bar" />
+            <ImageButton
+                android:onClick="@{()->vm.cancelModify()}"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="16dp"
+                android:layout_gravity="start"
+                android:background="@drawable/ripple_circle_white"
+                android:src="@drawable/ic_close"
+                app:tint="@color/black" />
 
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/club_modify_title"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_modify_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_club_modify_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_modify_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_modify_top_bar" />
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/club_modify_title"/>
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
 
         <TextView
             android:id="@+id/tv_club_modify_submit"
