--- a/android/app/src/main/res/layout/activity_other_profile.xml
+++ b/android/app/src/main/res/layout/activity_other_profile.xml
@@ -17,46 +17,43 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/transparent"
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/iv_back_btn"
-            onSingleClick="@{() -> vm.navigateToBack()}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:src="@drawable/ic_arrow_left"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar"
-            app:layout_constraintStart_toStartOf="@+id/toolbar"
-            app:layout_constraintTop_toTopOf="@id/toolbar" />
+            <ImageView
+                android:id="@+id/iv_back_btn"
+                onSingleClick="@{() -> vm.navigateToBack()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:background="@drawable/ripple_circle_white"
+                android:padding="16dp"
+                android:src="@drawable/ic_arrow_left" />
 
 
-        <TextView
-            android:id="@+id/textView2"
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:padding="16dp"
-            android:text="프로필"
-            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/toolbar" />
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="16dp"
+                android:text="프로필" />
 
-        <ImageView
-            android:id="@+id/iv_setting_btn"
-            onSingleClick="@{() -> vm.navigateToMore(1)}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:src="@drawable/ic_side_menu"
-            app:layout_constraintBottom_toBottomOf="@id/toolbar"
-            app:layout_constraintEnd_toEndOf="@+id/toolbar"
-            app:layout_constraintTop_toTopOf="@id/toolbar" />
+            <ImageView
+                android:id="@+id/iv_setting_btn"
+                onSingleClick="@{() -> vm.navigateToMore(1)}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:padding="16dp"
+                android:src="@drawable/ic_side_menu" />
+
+        </com.google.android.material.appbar.MaterialToolbar>
 
 
         <androidx.core.widget.NestedScrollView
@@ -83,8 +80,8 @@
                         android:id="@+id/iv_user_profile_edit"
                         glide="@{vm.uiState.profilePath}"
                         android:layout_width="wrap_content"
-                        android:src="@drawable/img_profile_normal"
                         android:layout_height="wrap_content"
+                        android:src="@drawable/img_profile_normal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +120,6 @@
                         app:layout_constraintStart_toEndOf="@+id/tv_user_name"
                         app:layout_constraintTop_toTopOf="@+id/tv_user_name"
                         tools:text="#1234" />
-
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
