--- a/android/app/src/main/res/layout/activity_pet_detail.xml
+++ b/android/app/src/main/res/layout/activity_pet_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -45,26 +44,24 @@
             app:layout_constraintStart_toStartOf="parent"
             app:setUpIndicator="@{vm.uiState.petsDetail.data.size()}" />
 
-
-        <androidx.appcompat.widget.Toolbar
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="?attr/actionBarSize"
             android:background="@drawable/rect_black_gradient_start"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
 
+            <ImageView
+                android:id="@+id/iv_arrow"
+                onSingleClick="@{() -> vm.navigateToBack()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:src="@drawable/ic_arrow_left"
+                app:tint="@color/white" />
 
-        <ImageView
-            android:id="@+id/iv_arrow"
-            onSingleClick="@{() -> vm.navigateToBack()}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_left"
-            app:tint="@color/white" />
+        </com.google.android.material.appbar.MaterialToolbar>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
