--- a/android/app/src/main/res/layout/activity_setting_my_location.xml
+++ b/android/app/src/main/res/layout/activity_setting_my_location.xml
@@ -20,33 +20,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <View
+        <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/view_my_location_top_bar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="?attr/actionBarSize"
             android:background="@color/gray50"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            onSingleClick="@{()->vm.closeSelect()}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:background="@drawable/ripple_circle_white"
-            android:src="@drawable/ic_close"
-            app:layout_constraintBottom_toBottomOf="@id/view_my_location_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_my_location_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_my_location_top_bar" />
+            <ImageView
+                onSingleClick="@{()->vm.closeSelect()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ripple_circle_white"
+                android:padding="16dp"
+                android:src="@drawable/ic_close" />
 
-        <TextView
-            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/my_location_title"
-            app:layout_constraintBottom_toBottomOf="@id/view_my_location_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_my_location_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_my_location_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_my_location_top_bar" />
+            <TextView
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/my_location_title" />
+        </com.google.android.material.appbar.MaterialToolbar>
 
         <LinearLayout
             android:id="@+id/linear_layout_my_location"
@@ -73,9 +69,9 @@
 
             <TextView
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
-                app:myLocation ="@{vm.userAddress}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:myLocation="@{vm.userAddress}"
                 tools:text="대한민국 제주특별자치도 제주시 이도1동 1250-15" />
 
             <Space
@@ -83,8 +79,8 @@
                 android:layout_height="20dp" />
 
             <TextView
-                onSingleClick="@{()->vm.submitSelect()}"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
+                onSingleClick="@{()->vm.submitSelect()}"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginVertical="24dp"
@@ -101,10 +97,10 @@
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:autoHandwritingEnabled="false"
-            app:layout_constraintTop_toBottomOf="@+id/view_my_location_top_bar"
             app:layout_constraintBottom_toTopOf="@+id/linear_layout_my_location"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_my_location_top_bar"
             app:lottie_fileName="animation_loading.json"
             app:lottie_loop="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
