--- a/android/app/src/main/res/layout/fragment_chat_list.xml
+++ b/android/app/src/main/res/layout/fragment_chat_list.xml
@@ -17,11 +17,11 @@
 
             <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rect_gray03_botline_bot1">
+                android:layout_height="wrap_content">
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:layout_width="match_parent"
+                    android:background="@color/white"
                     android:layout_height="wrap_content"
                     app:title="@string/chat_list_title"
                     app:titleMarginStart="20dp"
