--- a/android/app/src/main/res/layout/fragment_club_list.xml
+++ b/android/app/src/main/res/layout/fragment_club_list.xml
@@ -17,51 +17,46 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <View
-            android:id="@+id/view_club_list_top_bar"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_club_list_top_bar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            onSingleClick="@{()->vm.addMyLocation()}"
-            android:id="@+id/linear_layout_club_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:background="@drawable/ripple_circle_white"
-            app:address="@{vm.myAddress}"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_list_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_list_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_list_top_bar">
-
-            <TextView
-                android:text="@{vm.myAddress.adminArea}"
-                style="@style/Theme.AppCompat.TextView.Bold.Black.Size18"
+            <LinearLayout
+                android:id="@+id/linear_layout_club_location"
+                onSingleClick="@{()->vm.addMyLocation()}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="잠실6동" />
+                android:layout_marginStart="16dp"
+                android:background="@drawable/ripple_circle_white"
+                android:gravity="center"
+                android:orientation="horizontal"
+                app:address="@{vm.myAddress}"
+                app:layout_constraintBottom_toBottomOf="@id/toolbar_club_list_top_bar"
+                app:layout_constraintStart_toStartOf="@id/toolbar_club_list_top_bar"
+                app:layout_constraintTop_toTopOf="@id/toolbar_club_list_top_bar">
 
-            <Space
-                android:layout_width="6dp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    style="@style/Theme.AppCompat.TextView.Bold.Black.Size18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.myAddress.adminArea}"
+                    tools:text="잠실6동" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_arrow_bottom" />
-        </LinearLayout>
+                <Space
+                    android:layout_width="6dp"
+                    android:layout_height="wrap_content" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
-            android:src="@drawable/ic_alarm"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_list_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_club_list_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_list_top_bar" />
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_arrow_bottom" />
+            </LinearLayout>
+
+        </com.google.android.material.appbar.MaterialToolbar>
+
 
         <include
             android:id="@+id/include_club_list_participation_filter"
@@ -72,7 +67,7 @@
             android:layout_marginStart="12dp"
             app:filterName="@{vm.participationFilter.filterName}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <include
             android:id="@+id/include_club_list_size_filter"
@@ -83,7 +78,7 @@
             android:layout_marginHorizontal="5dp"
             app:filterName="@{ClubFilter.SIZE_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_club_list_participation_filter"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <include
             android:id="@+id/include_club_list_gender_filter"
@@ -94,14 +89,14 @@
             android:layout_marginHorizontal="5dp"
             app:filterName="@{ClubFilter.GENDER_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_club_list_size_filter"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_club_list_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="5dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@id/swipe_refresh_layout_club_list"
@@ -130,16 +125,16 @@
                     layout="@layout/include_club_not_address"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:visibility="gone"
-                    app:vm="@{vm}" />
+                    app:vm="@{vm}"
+                    tools:visibility="gone" />
 
                 <include
                     android:id="@+id/include_club_data"
                     layout="@layout/include_club_not_data"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:visibility="gone"
-                    app:actionHandler="@{vm}" />
+                    app:actionHandler="@{vm}"
+                    tools:visibility="gone" />
 
                 <include
                     android:id="@+id/include_club_error"
