--- a/android/app/src/main/res/layout/fragment_club_list.xml
+++ b/android/app/src/main/res/layout/fragment_club_list.xml
@@ -17,50 +17,41 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <View
-            android:id="@+id/view_club_list_top_bar"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar_club_list_top_bar"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="?attr/actionBarSize"
+            app:contentInsetStart="0dp"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            onSingleClick="@{()->vm.addMyLocation()}"
-            android:id="@+id/linear_layout_club_location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:background="@drawable/ripple_circle_white"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_list_top_bar"
-            app:layout_constraintStart_toStartOf="@id/view_club_list_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_list_top_bar">
-
-            <TextView
-                app:address="@{vm.myAddress}"
-                style="@style/Theme.AppCompat.TextView.Bold.Black.Size18"
+            <LinearLayout
+                onSingleClick="@{()->vm.addMyLocation()}"
+                android:id="@+id/linear_layout_club_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="내 동네 설정" />
+                android:layout_marginStart="16dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:background="@drawable/ripple_circle_white">
 
-            <Space
-                android:layout_width="6dp"
-                android:layout_height="wrap_content" />
+                <TextView
+                    app:address="@{vm.myAddress}"
+                    style="@style/Theme.AppCompat.TextView.Bold.Black.Size18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="내 동네 설정" />
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_arrow_bottom" />
-        </LinearLayout>
+                <Space
+                    android:layout_width="6dp"
+                    android:layout_height="wrap_content" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="15dp"
-            android:src="@drawable/ic_alarm"
-            app:layout_constraintBottom_toBottomOf="@id/view_club_list_top_bar"
-            app:layout_constraintEnd_toEndOf="@id/view_club_list_top_bar"
-            app:layout_constraintTop_toTopOf="@id/view_club_list_top_bar" />
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_arrow_bottom" />
+            </LinearLayout>
+
+        </com.google.android.material.appbar.MaterialToolbar>
 
         <include
             android:id="@+id/include_club_list_participation_filter"
@@ -71,7 +62,7 @@
             android:layout_marginStart="12dp"
             app:filterName="@{vm.participationFilter.filterName}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <include
             android:id="@+id/include_club_list_size_filter"
@@ -82,7 +73,7 @@
             android:layout_marginHorizontal="5dp"
             app:filterName="@{ClubFilter.SIZE_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_club_list_participation_filter"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <include
             android:id="@+id/include_club_list_gender_filter"
@@ -93,7 +84,7 @@
             android:layout_marginHorizontal="5dp"
             app:filterName="@{ClubFilter.GENDER_FILTER_SUBJECT}"
             app:layout_constraintStart_toEndOf="@id/include_club_list_size_filter"
-            app:layout_constraintTop_toBottomOf="@+id/view_club_list_top_bar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar_club_list_top_bar" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_club_list_filter"
