--- a/android/app/src/main/res/layout/activity_register_pet.xml
+++ b/android/app/src/main/res/layout/activity_register_pet.xml
@@ -57,10 +57,10 @@
 
             <ImageView
                 android:id="@+id/iv_add_dog_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="158dp"
+                android:layout_height="158dp"
                 android:layout_marginTop="80dp"
-                android:src="@drawable/ic_add_image"
+                android:src="@drawable/ic_add_black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" />
